--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -154,9 +154,14 @@
     "back_to_subjects": "Zurück zu Fächern",
     "search_subjects": "Fächer suchen...",
     "loading_subjects": "Fächer werden geladen...",
+    "error_loading_subjects": "Fehler beim Laden der Fächer",
+    "no_subjects_available": "Keine Fächer verfügbar",
+    "no_subjects_message": "Es gibt keine aktiven Fächer zum Anzeigen.",
     "current_subjects": "Aktuelle Fächer",
     "other_years": "Andere Jahre",
     "loading_course": "Kurs wird geladen...",
+    "error_loading_course": "Fehler beim Laden des Kurses",
+    "error_loading_title": "Fehler beim Laden des Kurses",
     "course_overview": "Kursübersicht",
     "course_overview_desc": "Hauptkursinhalt und Ressourcen",
     "todays_lesson": "Heutige Stunde",
