--- a/src/lib/i18n/locales/en-pirate.json
+++ b/src/lib/i18n/locales/en-pirate.json
@@ -157,9 +157,14 @@
     "back_to_subjects": "Back to ship's subjects",
     "search_subjects": "Hunt fer subjects...",
     "loading_subjects": "Haulin' in subjects...",
+    "error_loading_subjects": "Blimey! Error haulin' subjects",
+    "no_subjects_available": "No subjects aboard, matey",
+    "no_subjects_message": "There be no active subjects to display on this ship.",
     "current_subjects": "Current Ship Studies",
     "other_years": "Other Voyages",
     "loading_course": "Chartin' the course...",
+    "error_loading_course": "Blimey! Error chartin' course",
+    "error_loading_title": "Blimey! Error chartin' course",
     "course_overview": "Course Chart Overview",
     "course_overview_desc": "Main course treasure and ship resources",
     "todays_lesson": "Today's Ship Duty",
