--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -154,9 +154,14 @@
     "back_to_subjects": "Volver a materias",
     "search_subjects": "Buscar materias...",
     "loading_subjects": "Cargando materias...",
+    "error_loading_subjects": "Error al cargar materias",
+    "no_subjects_available": "No hay materias disponibles",
+    "no_subjects_message": "No hay materias activas para mostrar.",
     "current_subjects": "Materias Actuales",
     "other_years": "Otros Años",
     "loading_course": "Cargando curso...",
+    "error_loading_course": "Error al cargar curso",
+    "error_loading_title": "Error al cargar curso",
     "course_overview": "Vista General del Curso",
     "course_overview_desc": "Contenido principal del curso y recursos",
     "todays_lesson": "Lección de Hoy",
