--- a/src/lib/i18n/locales/fr.json
+++ b/src/lib/i18n/locales/fr.json
@@ -154,9 +154,14 @@
     "back_to_subjects": "Retour aux matières",
     "search_subjects": "Rechercher des matières...",
     "loading_subjects": "Chargement des matières...",
+    "error_loading_subjects": "Erreur lors du chargement des matières",
+    "no_subjects_available": "Aucune matière disponible",
+    "no_subjects_message": "Il n'y a pas de matières actives à afficher.",
     "current_subjects": "Matières Actuelles",
     "other_years": "Autres Années",
     "loading_course": "Chargement du cours...",
+    "error_loading_course": "Erreur lors du chargement du cours",
+    "error_loading_title": "Erreur lors du chargement du cours",
     "course_overview": "Aperçu du Cours",
     "course_overview_desc": "Contenu principal du cours et ressources",
     "todays_lesson": "Cours d'Aujourd'hui",
