--- a/src/lib/i18n/locales/it.json
+++ b/src/lib/i18n/locales/it.json
@@ -196,9 +196,14 @@
     "back_to_subjects": "Torna alle materie",
     "search_subjects": "Cerca materie...",
     "loading_subjects": "Caricamento materie...",
+    "error_loading_subjects": "Errore nel caricamento delle materie",
+    "no_subjects_available": "Nessuna materia disponibile",
+    "no_subjects_message": "Non ci sono materie attive da visualizzare.",
     "current_subjects": "Materie Correnti",
     "other_years": "Altri Anni",
     "loading_course": "Caricamento corso...",
+    "error_loading_course": "Errore nel caricamento del corso",
+    "error_loading_title": "Errore nel caricamento del corso",
     "course_overview": "Panoramica del Corso",
     "course_overview_desc": "Contenuto e risorse principali del corso",
     "todays_lesson": "Lezione di Oggi",
