--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -154,9 +154,14 @@
     "back_to_subjects": "科目に戻る",
     "search_subjects": "科目を検索...",
     "loading_subjects": "科目を読み込み中...",
+    "error_loading_subjects": "科目の読み込みエラー",
+    "no_subjects_available": "利用可能な科目がありません",
+    "no_subjects_message": "表示するアクティブな科目がありません。",
     "current_subjects": "現在の科目",
     "other_years": "他の年度",
     "loading_course": "コースを読み込み中...",
+    "error_loading_course": "コースの読み込みエラー",
+    "error_loading_title": "コースの読み込みエラー",
     "course_overview": "コース概要",
     "course_overview_desc": "メインコースコンテンツとリソース",
     "todays_lesson": "今日の授業",
