--- a/src/lib/i18n/locales/pt.json
+++ b/src/lib/i18n/locales/pt.json
@@ -201,9 +201,14 @@
     "back_to_subjects": "Voltar para matérias",
     "search_subjects": "Pesquisar matérias...",
     "loading_subjects": "Carregando matérias...",
+    "error_loading_subjects": "Erro ao carregar matérias",
+    "no_subjects_available": "Nenhuma matéria disponível",
+    "no_subjects_message": "Não há matérias ativas para exibir.",
     "current_subjects": "Matérias Atuais",
     "other_years": "Outros Anos",
     "loading_course": "Carregando curso...",
+    "error_loading_course": "Erro ao carregar curso",
+    "error_loading_title": "Erro ao carregar curso",
     "course_overview": "Visão Geral do Curso",
     "course_overview_desc": "Conteúdo e recursos principais do curso",
     "todays_lesson": "Aula de Hoje",
