--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -196,9 +196,14 @@
     "back_to_subjects": "Вернуться к предметам",
     "search_subjects": "Поиск предметов...",
     "loading_subjects": "Загрузка предметов...",
+    "error_loading_subjects": "Ошибка загрузки предметов",
+    "no_subjects_available": "Нет доступных предметов",
+    "no_subjects_message": "Нет активных предметов для отображения.",
     "current_subjects": "Текущие предметы",
     "other_years": "Другие годы",
     "loading_course": "Загрузка курса...",
+    "error_loading_course": "Ошибка загрузки курса",
+    "error_loading_title": "Ошибка загрузки курса",
     "course_overview": "Обзор курса",
     "course_overview_desc": "Основное содержание и ресурсы курса",
     "todays_lesson": "Сегодняшний урок",
