--- a/src/lib/i18n/locales/zh.json
+++ b/src/lib/i18n/locales/zh.json
@@ -154,9 +154,14 @@
     "back_to_subjects": "返回科目",
     "search_subjects": "搜索科目...",
     "loading_subjects": "正在加载科目...",
+    "error_loading_subjects": "加载科目时出错",
+    "no_subjects_available": "没有可用科目",
+    "no_subjects_message": "没有可显示的活跃科目。",
     "current_subjects": "当前科目",
     "other_years": "其他年份",
     "loading_course": "正在加载课程...",
+    "error_loading_course": "加载课程时出错",
+    "error_loading_title": "加载课程时出错",
     "course_overview": "课程概览",
     "course_overview_desc": "主要课程内容和资源",
     "todays_lesson": "今日课程",
