--- a/src/lib/i18n/locales/pl.json
+++ b/src/lib/i18n/locales/pl.json
@@ -196,9 +196,14 @@
     "back_to_subjects": "Back to subjects",
     "search_subjects": "Search subjects...",
     "loading_subjects": "Loading subjects...",
+    "error_loading_subjects": "Error loading subjects",
+    "no_subjects_available": "No subjects available",
+    "no_subjects_message": "There are no active subjects to display.",
     "current_subjects": "Current Subjects",
     "other_years": "Other Years",
     "loading_course": "Loading course...",
+    "error_loading_course": "Error loading course",
+    "error_loading_title": "Error loading course",
     "course_overview": "Course Overview",
     "course_overview_desc": "Main course content and resources",
     "todays_lesson": "Today's Lesson",
