--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -121,7 +121,12 @@
     "step6_desc": "Вернитесь в DesQTA и используйте кнопку \"Загрузить QR-код\" для выбора и загрузки сохраненного изображения QR-кода. DesQTA автоматически войдет в систему!",
     "help_title": "Нужна дополнительная помощь?",
     "help_desc": "Если вы не можете найти опцию \"Подключить мобильное приложение\", она может называться по-другому в вашей школе, например:",
-    "help_options": ["Регистрация мобильного устройства", "Настройка приложения", "Настройка QR-кода", "Подключить устройство"],
+    "help_options": [
+      "Регистрация мобильного устройства",
+      "Настройка приложения",
+      "Настройка QR-кода",
+      "Подключить устройство"
+    ],
     "help_contact": "Свяжитесь с IT-поддержкой вашей школы, если вы все еще не можете найти эту опцию.",
     "got_it": "Понятно, спасибо!"
   },
@@ -163,7 +168,7 @@
     "view_source_code": "Просмотр исходного кода",
     "website": "Веб-сайт",
     "official_website": "Официальный веб-сайт",
-    "copyright": "© 2025 DesQTA. Лицензировано под лицензией MIT."
+    "copyright": "© 2026 DesQTA. Лицензировано под лицензией MIT."
   },
   "dashboard": {
     "quick_links": "Быстрые ссылки",
