feat: overhaul offline mode

--- a/src/lib/i18n/locales/ar.json
+++ b/src/lib/i18n/locales/ar.json
@@ -19,6 +19,16 @@
     "settings": "الإعدادات",
     "close_theme_builder": "إغلاق منشئ المظهر"
   },
+  "connectivity": {
+    "offline": "أنت غير متصل",
+    "offline_desc": "قد تكون بعض الميزات محدودة. البيانات من الذاكرة المؤقتة.",
+    "degraded": "لا يمكن الوصول إلى SEQTA",
+    "degraded_desc": "عرض البيانات المخزنة. أعد المحاولة عند تحسن الاتصال.",
+    "queued": "{{count}} عنصر(عناصر) في قائمة الانتظار للمزامنة",
+    "syncing": "جاري المزامنة...",
+    "retry": "إعادة المحاولة",
+    "connected": "متصل"
+  },
   "navigation": {
     "dashboard": "لوحة التحكم",
     "courses": "الدورات",
