--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -19,6 +19,16 @@
     "settings": "Настройки",
     "close_theme_builder": "Закрыть конструктор тем"
   },
+  "connectivity": {
+    "offline": "Вы в автономном режиме",
+    "offline_desc": "Некоторые функции могут быть ограничены. Данные из кэша.",
+    "degraded": "Не удается подключиться к SEQTA",
+    "degraded_desc": "Отображаются данные из кэша. Повторите попытку при улучшении соединения.",
+    "queued": "{{count}} элемент(ов) в очереди на синхронизацию",
+    "syncing": "Синхронизация...",
+    "retry": "Повторить",
+    "connected": "Подключено"
+  },
   "navigation": {
     "dashboard": "Панель управления",
     "courses": "Курсы",
